# cnipol

./: .gitignore  .gitmodules  .travis.yml  00README  00README.rundb  CMakeLists.txt  FindMySQLPP.cmake  FindROOT.cmake  FindSQLite.cmake  LinkDef.h  Makefile  README.md  RHICAna.pl  Site-Config.cmake  get_revision_id.sh  install.sh  line.sh  run.db  setup.env  shell.nix
ana/: AlphaCalibrator.cxx  AnaEvent.cxx  AnaEventId.cxx  AnaInfo.cxx  AsymAnaInfo.cxx  BeamBunch.cxx  CachingLogReader.cxx  Calibrator.cxx  ChannelCalib.cxx  ChannelData.cxx  ChannelEvent.cxx  ChannelEventId.cxx  ChannelEvent_1210.cxx  CnipolAlphaHists.cxx  CnipolAsymHists.cxx  CnipolCalibHists.cxx  CnipolHists.cxx  CnipolKinemaCleanHists.cxx  CnipolKinematHists.cxx  CnipolPmtHists.cxx  CnipolPreprocHists.cxx  CnipolProfileHists.cxx  CnipolPulserHists.cxx  CnipolRawExtendedHists.cxx  CnipolRawHists.cxx  CnipolRunHists.cxx  CnipolScalerHists.cxx  CnipolSpinStudyHists.cxx  CnipolTargetHists.cxx  CnipolTimeMHists.cxx  DeadLayerCalibrator.cxx  DeadLayerCalibratorEDepend.cxx  DrawObjContainer.cxx  EventConfig.cxx  HistManager.cxx  MAlphaAnaInfo.cxx  MAlphaRoot.cxx  MAsymAnaInfo.cxx  MAsymFillHists.cxx  MAsymPmtHists.cxx  (+9 more)
anapc/: analyze.C  analyze.h  analyzeCalib.C  analyzeCalib.h  analyzeDeadLayer.C  analyzeDeadLayer.h  createRunInfo.C  createRunInfo.h  load.C  manalyze.C  manalyze.h  testCalib.C  testCalib.h
cnilib/: Run06_calib.tgz  Run06_config.tgz  Run06_dlayer.tgz  install.sh  run08_config.tgz
config/: crate3-1.ini  crate3-yellow.ini  crate3.ini  crate4-1.ini  crate4-2.ini  crate4-blue.ini  crate4-yellow.ini  crate4.ini  crate5-1.ini  crate5-2.ini  crate5-blue.ini  crate5.ini  crate6-1.ini  crate6-2.ini  crate6-blue.ini  crate6.ini  mode_at.ini  mode_at_blu1.ini  mode_at_blu2.ini  mode_at_yel1.ini  mode_at_yel2.ini  mode_raw_blu1.ini  mode_raw_blu2.ini  mode_raw_yel1.ini  polarimeter.blu1.alpha.ini  polarimeter.blu1.alpha0.ini  polarimeter.blu1.data.ini  polarimeter.blu1.ini  polarimeter.blu1.ini_inj  polarimeter.blu1.pulser.ini  polarimeter.blu1.test.ini  polarimeter.blu2.alpha.ini  polarimeter.blu2.alpha0.ini  polarimeter.blu2.data.ini  polarimeter.blu2.ini  polarimeter.blu2.pulser.ini  polarimeter.blu2.test.ini  polarimeter.yel1.alpha.ini  polarimeter.yel1.alpha0.ini  polarimeter.yel1.data.ini  (+9 more)
config/run11/: crate3-blue.ini  crate3-yellow.ini  crate4-blue.ini  crate4-yellow.ini  crate5-blue.ini  crate5-yellow.ini  (+2 more)
contrib/: RunPeriod.inc  database_schema.sql
doc/: Doxyfile  README.analysis  README.dedx  README.dlayer  README.fastoffline  README.install  README.online  README.rundb
expert/: install.sh
inc/: AfterBurner.h  AlphaCalibrator.h  AnaEvent.h  AnaEventId.h  AnaFillExternResult.h  AnaFillResult.h  AnaGlobResult.h  AnaInfo.h  AnaMeasResult.h  AsymAnaInfo.h  AsymCalculator.h  AsymCommon.h  AsymDb.h  AsymDbSql.h  AsymErrorDetector.h  AsymGlobals.h  AsymHeader.h  AsymOnline.h  AsymPlot.h  AsymProcess.h  AsymRead.h  AsymRecoverUserDefined.h  AsymRoot.h  BeamBunch.h  BiasCurrentUtil.h  CMakeLists.txt  CachingLogReader.h  CalibCoefSet.h  Calibrator.h  ChannelCalib.h  ChannelData.h  ChannelEvent.h  ChannelEventId.h  CnipolAlphaHists.h  CnipolAsymHists.h  CnipolCalibHists.h  CnipolHists.h  CnipolKinemaCleanHists.h  CnipolKinematHists.h  CnipolPmtHists.h  (+50 more)
kumac/: CalibCal.pl  CalibFit.C  CalibGen.pl  ExeCalib.C  ExeKinFit.C  Integ.C  KinFit.C  asymplot.kumac  filter.sh  lr_bunch.kumac  lr_spinpat.pl  mkConfig.awk  pvector.pl
macro/: A_N.C  AgsCniDefs.h  AsymErrorDetector.C  AsymPlot.C  BenchMark.C  CalcOnlinePol.pl  CalibFit.C  DlayerAnalyzer.C  DlayerMonitor.C  ErrorDetector.C  ExeKinFit.C  FillByFill.C  KinFit.C  OfflinePol.C  PeriodByPeriod.C  RatioCalc.C  SuperposeDlayerPlot.h  SuperposeSummaryPlot.h  Template.C  Utility.h  animProfile.C  asymplot.kumac  compare.py  cutq.kumac  filter.sh  fixed-scan.kumac  install.sh  likelihood.C  load.C  load_animProfile.C  lr_bunch.kumac  lr_spinpat.pl  ltfitting.C  ltfitting.hpp  onl-offl.kumac  onliplot-avex.kumac  plotAN.C  plotAN.h  plotAN2.C  plotPolarFromFile.C  (+3 more)
online/: Makefile  setup_online.sh
phys/: install.sh  minus_t_vs_Tkin.kumac
script/: Calib.pl  CalibCal.pl  CalibGen.pl  CnipolDaemon.sh  CompareRuns  ExeKinFit.C  FilterRun.pl  FilterRun.sh  ImageHandler.sh  IntegCal.pl  MakeLinks.sh  MakeSummary.sh  MkLink.sh  OfflinePol.sh  OnlinePol.sh  RHICAna.pl  ScaleCalib.sh  ScaleCalibStbySt.pl  SpinPattern.sh  UpdateLog.sh  anomfinder.sh  cdev_info.py  cnipol_daemon.sh  copy_data.cron  copy_data.sh  copy_results.sh  copy_results_pc2pc.sh  cpRun.sh  dLayer.pl  dLayerAve.sh  dLayerCal.pl  dLayerGen.pl  export_run_periods.py  fixedTargRatio.pl  gen_wfd_map.py  get_fill_info.sh  install.sh  malpha_run15_plots.sh  match_fills.py  mkConfig.pl  (+40 more)
src/: AfterBurner.cxx  AlphaCalibrator.cxx  AnaEvent.cxx  AnaEventId.cxx  AnaFillExternResult.cc  AnaFillExternResult.cxx  AnaFillExternResult.h  AnaFillResult.cc  AnaFillResult.cxx  AnaFillResult.h  AnaGlobResult.cc  AnaGlobResult.cxx  AnaGlobResult.h  AnaInfo.cc  AnaInfo.cxx  AnaInfo.h  AnaMeasResult.cc  AnaMeasResult.cxx  AnaMeasResult.h  AnaResult.cc  AnaResult.h  Asym.cc  Asym.h  AsymAnaInfo.cc  AsymAnaInfo.cxx  AsymAnaInfo.h  AsymCalc.cc  AsymCalc.h  AsymCalculator.cc  AsymCalculator.cxx  AsymCalculator.h  AsymCommon.cc  AsymCommon.cxx  AsymCommon.h  AsymDb.cc  AsymDb.h  AsymDbFile.cc  AsymDbFile.cxx  AsymDbFile.h  AsymDbSql.cc  (+151 more)
src/cdev/: Makefile
src/util/: Makefile  ReconstructTime.cc  calcPhi.cc  converge  converge.cc  dedx.cc  eLoss.cc  getPattern.c  interval.cc
tests/: RawDataReader.cxx  RawDataReader_reference.h  asym.cxx  asym_main.cxx  asym_reference.h  common.cxx  common.h
webview/: .htaccess  DbEntry.php  DbReader.php  Dockerfile  PlotHelper.php  RunSelector.php  SqlDbReader.php  bottom.html  chaninfo.html  chaninfo_calib.html  config.php  export.php  githubhook.php  head.html  htaccess  index.html  index.php  main.css  main.js  runconfig.php  runinfo.html  runinfo_calib.html  runinfo_channel.html  runinfo_index.html  toc.js  utils.php  wiki.css  wiki_commonprint.css  wiki_monobook_main.css
(+511 files in other folders)
